Fix side-scrollbar

--- a/Webbutveckling-HTML-CSS/ESC-Hacker-Escape-Rooms/src/style.scss
+++ b/Webbutveckling-HTML-CSS/ESC-Hacker-Escape-Rooms/src/style.scss
@@ -192,6 +192,7 @@ header
                 position: relative;
                 top: -1.5em;
                 left: 8em;
+                width: fit-content;
 
                 small
                 {
